--- a/ML/00numpy/numpy.ipynb
+++ b/ML/00numpy/numpy.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,76 +159,6 @@
   },
   {
    "source": [
-    "### Less Memory"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "28000\n4000\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "import sys\n",
-    "S= range(1000)\n",
-    "print(sys.getsizeof(5)*len(S))\n",
-    " \n",
-    "D= np.arange(1000)\n",
-    "print(D.size*D.itemsize)"
-   ]
-  },
-  {
-   "source": [
-    "### Fast"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "221.99392318725586\n59.9970817565918\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "import sys\n",
-    " \n",
-    "SIZE = 1000000\n",
-    " \n",
-    "L1= range(SIZE)\n",
-    "L2= range(SIZE)\n",
-    "A1= np.arange(SIZE)\n",
-    "A2=np.arange(SIZE)\n",
-    " \n",
-    "start= time.time()\n",
-    "result=[(x,y) for x,y in zip(L1,L2)]\n",
-    "print((time.time()-start)*1000)\n",
-    " \n",
-    "start=time.time()\n",
-    "result= A1+A2\n",
-    "print((time.time()-start)*1000)"
-   ]
-  },
-  {
-   "source": [
     "## Array Creation\n",
     "\n",
     "`array`: Fundamental element in numpy is homogenous array. Numpy Arrays can be 1D, 2D, 3D ...nD\n",
@@ -238,13 +168,6 @@
     "### 1) Converting Python sequences to NumPy Arrays\n",
     "\n",
     "- `np.array()`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "<div align=\"center\"><img src=\"img/array_creation.jpg\" alt=\"Itrtype\" ></div> "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -279,34 +202,6 @@
     "print(\"total item: \",a2D.size)  \n",
     "print(\"shape: \",a2D.shape)  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[[ 1  2  3]\n  [ 4  5  6]\n  [ 7  8  9]]\n\n [[10 11 12]\n  [13 14 15]\n  [16 17 18]]]\nshape:  (2, 3, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "a3D = np.array([ [[1,2,3], [4,5,6], [7,8,9]],\n",
-    "                  [[10,11,12], [13,14,15], [16,17,18]]\n",
-    "               ])\n",
-    "print(a3D)\n",
-    "print(\"shape: \",a3D.shape)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "source": [
@@ -707,22 +602,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 2, 14, 10, 18],\n",
-       "       [ 3,  6, 19,  6],\n",
-       "       [12,  4, 14, 19],\n",
-       "       [19,  8, 19, 10],\n",
-       "       [17,  6, 16, 16]])"
+       "array([[ 1,  9, 12, 13],\n",
+       "       [15, 17,  3, 15],\n",
+       "       [ 8,  9,  4,  3],\n",
+       "       [18,  4,  1,  5],\n",
+       "       [ 0,  8,  4, 11]])"
       ]
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 48
     }
    ],
    "source": [
@@ -756,84 +651,6 @@
   },
   {
    "source": [
-    "### Selecting values from your array that fulfill certain conditions"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[2 4 0 3 2 3]\n\n[16  9 16  9  7 15  8  9 11 16  8 10  7 19]\n\n[ 2 14 10 18  6  6 12  4 14  8 10  6 16 16]\n\n[10  3  6  6  4  8 10  6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print all of the values in the array that are less than 5.\n",
-    "print(ar[ar<5]) \n",
-    "\n",
-    "# numbers that are equal to or greater than 5\n",
-    "print()\n",
-    "five_up = (ar >= 5)\n",
-    "print(ar[five_up])\n",
-    "\n",
-    "# elements that are divisible by 2:\n",
-    "print()\n",
-    "divisible_by_2 = a[a%2==0]\n",
-    "print(divisible_by_2)\n",
-    "\n",
-    "# elements that satisfy two conditions using the & and | operators:\n",
-    "print()\n",
-    "c = a[(a > 2) & (a < 11)]\n",
-    "print(c)"
-   ]
-  },
-  {
-   "source": [
-    "You can also use `np.where()` to select elements or indices from an array."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(array([0, 0, 1, 2], dtype=int64), array([0, 3, 1, 3], dtype=int64))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print the indices of elements that are, for example, less than 5:\n",
-    "a = np.array([[1 , 5, 6, 4], \n",
-    "              [5, 1, 7, 8], \n",
-    "              [9, 10, 11, 1]])\n",
-    "b = np.where(a<5)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "source": [
-    "In this example, a tuple of arrays was returned: one for each dimension.\n",
-    "The first array represents the row indices where these values are found, and\n",
-    "the second array represents the column indices where the values are found. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
     "### Array slicing\n",
     "\n",
     "`arr[start_row_idx : end_row_idx + 1, start_col_idx : end_col_idx + 1]`"
@@ -843,19 +660,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = np.array([[1 , 2, 3, 4], \n",
     "              [5, 6, 7, 8], \n",
     "              [9, 10, 11, 12],\n",
-    "              [1 , 2, 3, 4]])"
+    "              [13 , 14, 15, 16]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -873,15 +690,84 @@
    ]
   },
   {
+   "source": [
+    "<div align=\"center\"><img src=\"img/index_slice.jpg\" alt=\"Itrtype\" ></div> "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[ 4  8 12  4]\n\n[ 4  8 12  4]\n"
+      "[ 2  6 10 14]\nvs\n[[ 2]\n [ 6]\n [10]\n [14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:,1]) #all rows of column 2\n",
+    "print(\"vs\")\n",
+    "print(a[:,1:2]) #all rows of column 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5 6 7 8]\nvs\n[[5 6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[1,:]) #all columns of row 2\n",
+    "print(\"vs\")\n",
+    "print(a[1:2,:]) #all columns of row 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 3  4]\n [ 7  8]\n [11 12]\n [15 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:,2:]) #all rows of last two rows"
+   ]
+  },
+  {
+   "source": [
+    "#### Negative slicing of NumPy arrays"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[ 4  8 12 16]\n\n[ 4  8 12 16]\n"
      ]
     }
    ],
@@ -894,23 +780,64 @@
   },
   {
    "source": [
-    "# 2nd last  column only\n",
-    "ans = a[:,-2:-1]\n",
+    "#  last two  column only\n",
+    "ans = a[:,-2:]\n",
     "print(ans) \n",
     "print()\n",
     "print(ans[1,0])"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 137,
+   "execution_count": 66,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[ 3]\n [ 7]\n [11]\n [ 3]]\n\n7\n"
+      "[[ 3  4]\n [ 7  8]\n [11 12]\n [15 16]]\n\n7\n"
      ]
     }
+   ]
+  },
+  {
+   "source": [
+    "If, however, we wanted to extract from the end, we would have to explicitly provide a negative step-size otherwise the result would be an empty list."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 4  3]\n [ 8  7]\n [12 11]\n [16 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[:,-1:-3:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Reversed array : \n [[16 15 14 13]\n [12 11 10  9]\n [ 8  7  6  5]\n [ 4  3  2  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Reversed array :','\\n',a[::-1,::-1])"
    ]
   },
   {
@@ -981,6 +908,216 @@
     "# get all values greater then 5\n",
     "a[mask]"
    ]
+  },
+  {
+   "source": [
+    "### Selecting values from your array that fulfill certain conditions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print all of the values in the array that are less than 5.\n",
+    "print(ar[ar<5]) \n",
+    "\n",
+    "# numbers that are equal to or greater than 5\n",
+    "print()\n",
+    "five_up = (ar >= 5)\n",
+    "print(ar[five_up])\n",
+    "\n",
+    "# elements that are divisible by 2:\n",
+    "print()\n",
+    "divisible_by_2 = a[a%2==0]\n",
+    "print(divisible_by_2)\n",
+    "\n",
+    "# elements that satisfy two conditions using the & and | operators:\n",
+    "print()\n",
+    "c = a[(a > 2) & (a < 11)]\n",
+    "print(c)"
+   ]
+  },
+  {
+   "source": [
+    "#### `np.where()` to select elements or indices from an array."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print the indices of elements that are, for example, less than 5:\n",
+    "a = np.array([[1 , 5, 6, 4], \n",
+    "              [5, 1, 7, 8], \n",
+    "              [9, 10, 11, 1]])\n",
+    "b = np.where(a<5)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "In this example, a tuple of arrays was returned: one for each dimension.\n",
+    "The first array represents the row indices where these values are found, and\n",
+    "the second array represents the column indices where the values are found. "
+   ]
+  },
+  {
+   "source": [
+    " ## 3D Arrays\n",
+    "\n",
+    " <div align=\"center\"><img src=\"img/array_creation.jpg\" alt=\"Itrtype\" ></div> "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(3, 3, 2)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "a = np.array([[[1,2],[3,4],[5,6]],# first axis array\n",
+    "[[7,8],[9,10],[11,12]],# second axis array\n",
+    "[[13,14],[15,16],[17,18]]])# third axis array\n",
+    "\n",
+    "a.shape # 3 sets , 3 rows, 2 columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1 2]\n [3 4]\n [5 6]] \n\n[1 2] \n\n1 \n\n[2 4 6] \n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# value\n",
+    "print(a[0],'\\n')\n",
+    "print(a[0,0],'\\n')\n",
+    "# First array, first row, first column value\n",
+    "print(a[0,0,0],'\\n')\n",
+    "# First array last column \n",
+    "print(a[0,:,1],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 7  8]\n [ 9 10]\n [11 12]]\n\n[[13 14]\n [15 16]\n [17 18]]\n\nfirst row from each arrays: \n\n[[ 1  2]\n [ 7  8]\n [13 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[1])\n",
+    "print()\n",
+    "print(a[2])\n",
+    "print()\n",
+    "print(\"first row from each arrays:\",'\\n')\n",
+    "print(a[:,0,:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[[ 7  8]]\n\n [[13 14]]]\n\n watch out!! \n\n[[ 7  8]\n [13 14]] \n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First one rows for second and third arrays:\n",
+    "print(a[1:,:1,:2])\n",
+    "print('\\n',\"watch out!!\",'\\n')\n",
+    "# First one rows for second and third arrays:\n",
+    "print(a[1:,0,:2],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### Converting to 1D array with `flatten()` method\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Printing as a single array : \n [ 7  8  9 10 13 14 15 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Printing as a single array :','\\n',a[1:,0:2,0:2].flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[[ 5  6]\n  [ 3  4]]\n\n [[11 12]\n  [ 9 10]]\n\n [[17 18]\n  [15 16]]]\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ]
 }
