--- a/Py/05sets/sets.ipynb
+++ b/Py/05sets/sets.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
@@ -25,6 +25,7 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
    "source": [
     "# Set\n",
     "- contains only unique elements\n",
@@ -32,13 +33,24 @@
     "- unordered\n",
     "- unindexable"
    ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
+   "source": [
+    "## Introduction"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "s = {5,3,7,8,4,6,6,6}\r\n",
+    "# No duplicate elements\r\n",
+    "print(s)\r\n",
+    "type(s)"
+   ],
    "outputs": [
     {
      "output_type": "stream",
@@ -58,44 +70,45 @@
      "execution_count": 4
     }
    ],
-   "source": [
-    "s = {5,3,7,8,4,6,6,6}\n",
-    "# No duplicate elements\n",
-    "print(s)\n",
-    "type(s)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "s.add(99)\r\n",
+    "print(s)\r\n",
+    "s.remove(8) # remove(item) ✖ remove(idx)\r\n",
+    "print(s)"
+   ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{3, 4, 5, 6, 7, 8, 99}\n{3, 4, 5, 6, 7, 99}\n"
+      "{3, 4, 5, 6, 7, 8, 99}\n",
+      "{3, 4, 5, 6, 7, 99}\n"
      ]
     }
    ],
-   "source": [
-    "s.add(99)\n",
-    "print(s)\n",
-    "s.remove(8) # remove(item) ✖ remove(idx)\n",
-    "print(s)"
-   ]
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "## Remove duplicates for list"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "source": [
+    "l = [1,1,1,2,3,4,4,4,6,6,5]\r\n",
+    "_set = set(l)\r\n",
+    "_l = list(_set)\r\n",
+    "print(_l)"
+   ],
    "outputs": [
     {
      "output_type": "stream",
@@ -105,12 +118,243 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "l = [1,1,1,2,3,4,4,4,6,6,5]\n",
-    "_set = set(l)\n",
-    "_l = list(_set)\n",
-    "print(_l)"
-   ]
+    "## Membership Operator"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "7 in {1,2,3,4,5,6,7}"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Set Operations\r\n",
+    "\r\n",
+    "- set `union`\r\n",
+    "- set `intersection`\r\n",
+    "- set `difference`\r\n",
+    "- set `symmetric difference`"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "s1= {1,3,4,5,8}\r\n",
+    "s2= {4,5,6,7,1,9}"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "s1.union(s2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 3, 4, 5, 6, 7, 8, 9}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "s1 | s2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 3, 4, 5, 6, 7, 8, 9}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "s1.intersection(s2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 4, 5}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "s1 & s2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 4, 5}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "s1.difference(s2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{3, 8}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "s2.difference(s1)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{6, 7, 9}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "s1 - s2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{3, 8}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### symmetric difference"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "s1.symmetric_difference(s2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{3, 6, 7, 8, 9}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "(s1 | s2) - (s1 & s2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{3, 6, 7, 8, 9}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "metadata": {}
   }
  ]
 }
